[website] added explicit encoding of pages

--- a/website/src/public/index.html
+++ b/website/src/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
     <meta property="og:title" content="Intergalactic – Design System" />
     <meta
       property="og:description"
