--- a/website/src/public/index.html
+++ b/website/src/public/index.html
@@ -8,8 +8,8 @@
       content="Intergalactic is a constantly developing system of UI components, guidelines and UX patterns. With all these tools you can build your own product based on the Semrush platform."
     />
     <meta property="og:image" content="/social.png" />
-    <link rel="stylesheet" href="/main.css" />
-    <link rel="stylesheet" href="/main-render.css" />
+    <link rel="stylesheet" href="/_.._/src/main.css" />
+    <link rel="stylesheet" href="/_.._/src/main-render.css" />
     <script>
       dataLayer = window.dataLayer || [];
       if (location.origin === 'https://developer.semrush.com') {
@@ -27,11 +27,12 @@
     </script>
   </head>
   <body>
-    <div id="root"><!--%ssr-html-entry%--></div>
+    <!--    <div id="root">&lt;!&ndash;%ssr-html-entry%&ndash;&gt;</div>-->
+    <div id="root"></div>
     <script>
       /*--%ssr-js-entry%--*/
     </script>
-    <script src="/main-render.js"></script>
+    <script type="module" src="/_.._/src/main-render.js"></script>
     <noscript>
       <iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-PP7RKT7"
