[website] added semcore components styles ssr

--- a/website/src/public/index.html
+++ b/website/src/public/index.html
@@ -8,7 +8,6 @@
       content="Intergalactic is a constantly developing system of UI components, guidelines and UX patterns. With all these tools you can build your own product based on the Semrush platform."
     />
     <meta property="og:image" content="/social.png" />
-    <object id="__reshadow__"></object>
     <link rel="stylesheet" href="/main-render.css" />
     <script>
       dataLayer = window.dataLayer || [];
@@ -25,6 +24,7 @@
         })(window, document, 'script', 'dataLayer', 'GTM-PP7RKT7');
       }
     </script>
+    <!--%ssr-head-html-entry%-->
   </head>
   <body>
     <div id="root">
