[website] Hide special dom node for inserting styles
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/website/src/public/index.html
+++ b/website/src/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta property="og:image" content="/social.png" />
     <!--%ssr-head-html-entry%-->
-    <object id="__reshadow__"></object>
+    <object id="__reshadow__" style="display: none"></object>
     <link rel="stylesheet" href="/main-render.css" />
     <script>
       dataLayer = window.dataLayer || [];
