--- a/website/src/public/index.html
+++ b/website/src/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta property="og:title" content="Intergalactic – Design System" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/ico" href="/intergalactic/favicon.icon" />
+    <link rel="icon" type="image/ico" href="/intergalactic/favicon.ico" />
     <meta
       property="og:description"
       content="Intergalactic is a constantly developing system of UI components, guidelines and UX patterns. With all these tools you can build your own product based on the Semrush platform."
